--- a/Web/BeStudent.Web/Views/Shared/_Layout.cshtml
+++ b/Web/BeStudent.Web/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                                 <a class="nav-link text-dark" asp-controller="Chats" asp-action="Chat">Chat</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Payments" asp-action="ChooseCourse">Payments</a>
+                                <a class="nav-link text-dark" asp-controller="Payments" asp-action="ShowNewSemester">Payments</a>
                             </li>
                         }
                     </ul>
