--- a/Web/BeStudent.Web/wwwroot/css/calendar.css
+++ b/Web/BeStudent.Web/wwwroot/css/calendar.css
@@ -55,7 +55,7 @@ Calendar Styling */
 
     .calendar .days li .event {
         font-size: 0.75rem;
-        padding: 0.4rem;
+        padding: 0.2rem;
         color: white;
         white-space: nowrap;
         overflow: hidden;
@@ -66,11 +66,12 @@ Calendar Styling */
 
         .calendar .days li .event.begin {
             border-radius: 1rem 0 0 1rem;
+            padding-left: 0.6rem;
         }
 
         .calendar .days li .event.end {
             border-radius: 0 1rem 1rem 0;
-            height: 1.95rem;
+            height: 1.52rem;
         }
 
         .calendar .days li .event.clear {
